# raylib-cpp-template

./: .clang-format  .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: game.cpp  game.hpp
